Colaboratory를 통해 생성됨

--- a/Pre-processing.ipynb
+++ b/Pre-processing.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyMNJTfqbwzwd/euNZ7VUd4m",
+      "authorship_tag": "ABX9TyPaL9O/Ah4nDEE0doZdXYRj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "TYDgdeEjBC6j"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "FcQuypa-BOyT"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "id": "XbUXmoeKBaBk",
         "outputId": "88aba6ba-6f22-4d6a-91e4-8ab326171a8e"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -132,7 +132,7 @@
         "id": "ktaGvWhVClDN",
         "outputId": "cde5c916-051f-4aff-92fc-a79612d23fd3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +160,7 @@
         "id": "LaUTvTU2Cygd",
         "outputId": "48bb2dc1-a5b8-4994-cd65-e0db775bc20a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
         "id": "PeHxMy_WC-AX",
         "outputId": "c232bba5-54ad-47b4-afa7-fe44496be2c8"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "LK2W6YiaDDf3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "hyOz9zHZEOPA"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -251,7 +251,7 @@
       "metadata": {
         "id": "oHYLQ1s7E0uM"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
         "id": "TogeHQjCEmks",
         "outputId": "18ee34d3-ab0e-4d7a-b358-bb1385d3adeb"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,7 +295,7 @@
         "id": "V-OV4YT6Eq1r",
         "outputId": "c005cfe2-a335-45a2-a979-d792b5dab130"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -321,7 +321,7 @@
         "id": "xOQQnZ2MEuZ7",
         "outputId": "501c847d-15f0-4262-d3be-80d02284e042"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -355,7 +355,7 @@
       "metadata": {
         "id": "d_lz6ywdFdGo"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -370,7 +370,7 @@
         "id": "FCz92INGFk1v",
         "outputId": "6fa81dcd-5029-4acb-dd86-107395c6b58d"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +396,7 @@
         "id": "NooU64C1FwDz",
         "outputId": "deb0efb7-93e2-491d-a8a1-a66d15b14dc4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -430,7 +430,7 @@
       "metadata": {
         "id": "Tza5c1PnF8ns"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +445,7 @@
         "id": "XSDGf92MGJWv",
         "outputId": "3e033817-ed7e-4e74-ea21-e57939be98b4"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -471,7 +471,7 @@
         "id": "1PVKuclPGLiz",
         "outputId": "e8ee18e2-7073-4904-ff39-b2b1c13859b6"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -495,7 +495,7 @@
       "metadata": {
         "id": "qDA6zhdlGR9v"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -518,7 +518,7 @@
       "metadata": {
         "id": "X-00KhQmGcIX"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "kMNYZK6jGkax"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +544,7 @@
         "id": "N6E96iGgGmW_",
         "outputId": "6f26454f-8341-4032-cc83-1813388ceb7a"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
       "metadata": {
         "id": "SlYL53pJGx5X"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -594,7 +594,7 @@
         "id": "VVNbG2YCIBfj",
         "outputId": "83d58c53-c57e-449c-9e60-54007e49ebda"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -620,7 +620,7 @@
         "id": "jRilQiyEIFf4",
         "outputId": "785e684e-29f0-4489-af24-4257b15a7165"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -642,7 +642,7 @@
       "metadata": {
         "id": "NrtnQkAnIIvd"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +665,7 @@
       "metadata": {
         "id": "ZIV_X231IXvD"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +680,7 @@
         "id": "A-gp35HAIfB9",
         "outputId": "dfcb55f2-96a0-468d-e879-973f1f4b71b0"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -713,7 +713,7 @@
       "metadata": {
         "id": "8Zae03kdIkpj"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "0BYsDNLYIrEP"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -741,7 +741,7 @@
         "id": "TV1MMupgIsaP",
         "outputId": "bb274ec1-c7a5-4f2f-ae29-fe6fa4bd752d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +767,7 @@
         "id": "jzqQH4OLIvu_",
         "outputId": "48385aa2-92c3-4a1d-dfed-d5cc577c0b45"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -793,7 +793,7 @@
         "id": "6YJ6DaKhI0ZP",
         "outputId": "be6b232e-d755-45bd-c23b-d4311f3b5621"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -817,7 +817,7 @@
       "metadata": {
         "id": "RlcJGODjI9Tn"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +832,7 @@
         "id": "g8I16PTHJAPH",
         "outputId": "1768a693-777c-4d1a-ff39-88b34c9d67f2"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
         "id": "G74PsyloJCYg",
         "outputId": "0a204e20-fb47-468f-c98f-688a90dd90b1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -892,7 +892,7 @@
       "metadata": {
         "id": "vdaFAgH1JYjr"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -907,7 +907,7 @@
         "id": "96kreyDbJddW",
         "outputId": "2c2bee92-7fcc-4dd6-d4fb-ca7c93b1f63c"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +933,7 @@
         "id": "zk98rWwbJf8v",
         "outputId": "60515ebd-5ef0-4895-a8ca-acde9c6d1cfa"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -968,7 +968,7 @@
         "id": "6F5-jzehJnVs",
         "outputId": "6a858b4e-0531-4464-d43e-adc2969a3d05"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1010,7 +1010,7 @@
       "metadata": {
         "id": "cxxdS_YPJzC7"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1027,7 +1027,7 @@
         "id": "o6WjT-ojJzXM",
         "outputId": "f082fbd2-f778-41f2-9078-21bbc9ade731"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1050,7 +1050,7 @@
       "metadata": {
         "id": "FBBbidTCJzmt"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1066,7 +1066,7 @@
         "id": "CVkGNqXUKgjk",
         "outputId": "16321f41-598a-4613-f3c6-fd0b33345bbb"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1089,7 +1089,7 @@
         "id": "uXNsmYgeKq-L",
         "outputId": "e6cf9f80-9a3e-411a-d112-09358d2f2c66"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1112,7 +1112,7 @@
         "id": "GkhouyzNKv9T",
         "outputId": "9849b44a-c3a3-46c9-9c96-0fbf33d4d0e1"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,6 +1122,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "0VnF-Jb3O_hm"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1151,7 +1162,7 @@
       "metadata": {
         "id": "jlzVZrzSLIF3"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1168,7 +1179,7 @@
         "id": "uUa8sRqYLSq4",
         "outputId": "4e05b46e-5aae-459d-ebcd-76cf9a2be9c1"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1177,6 +1188,244 @@
             "['환영', '하', 'ㅂ니다', '!', '자연어', '처리', '수업', '은', '재미있', '게', '듣', '고', '계시', 'ㄴ가요', '?']\n",
             "['환영', '자연어', '처리', '수업']\n",
             "[('환영', 'NNG'), ('하', 'XSV'), ('ㅂ니다', 'EFN'), ('!', 'SF'), ('자연어', 'NNG'), ('처리', 'NNG'), ('수업', 'NNG'), ('은', 'JX'), ('재미있', 'VA'), ('게', 'ECD'), ('듣', 'VV'), ('고', 'ECE'), ('계시', 'VXA'), ('ㄴ가요', 'EFQ'), ('?', 'SF')]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Khaiii \n",
+        "\n",
+        ">https://tech.kakao.com/2018/12/13/khaiii/"
+      ],
+      "metadata": {
+        "id": "CdehQCL3PDcu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git clone https://github.com/kakao/khaiii.git\n",
+        "!pip install cmake\n",
+        "!mkdir build\n",
+        "!cd build && cmake /content/khaiii\n",
+        "!cd /content/build/ && make all\n",
+        "!cd /content/build/ && make resource\n",
+        "!cd /content/build && make install\n",
+        "!cd /content/build && make package_python\n",
+        "!pip install /content/build/package_python"
+      ],
+      "metadata": {
+        "id": "A-ZW8jqBPCRm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from khaiii import KhaiiiApi\n",
+        "khaiiApi = KhaiiiApi()"
+      ],
+      "metadata": {
+        "id": "05ACH9BqPCJe"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tokenized = khaiiApi.analyze('헤어질 결심은, 그녀가 할 수 있는 최선의 고백이자 응답이었다. 이 영화를 본다면, 분명 누군가는 위로를 받고 다시 살아갈 결심을 할 것이다.')\n",
+        "tokens = []\n",
+        "\n",
+        "for words in tokenized:\n",
+        "  tokens.extend([str(m).split('/')[0]] for m in words.morphs)\n",
+        "\n",
+        "print(tokens)"
+      ],
+      "metadata": {
+        "id": "Wp2C9UWePYa8",
+        "outputId": "1388d8f5-ae62-4be2-e4d9-b5e6b096c815",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[['헤어지'], ['ㄹ'], ['결심'], ['은'], [','], ['그녀'], ['가'], ['하'], ['ㄹ'], ['수'], ['있'], ['는'], ['최선'], ['의'], ['고백'], ['이'], ['자'], ['응답'], ['이'], ['었'], ['다'], ['.'], ['이'], ['영화'], ['를'], ['보'], ['ㄴ다면'], [','], ['분명'], ['누구'], ['이'], ['ㄴ가'], ['는'], ['위로'], ['를'], ['받'], ['고'], ['다시'], ['살아가'], ['ㄹ'], ['결심'], ['을'], ['하'], ['ㄹ'], ['것'], ['이'], ['다'], ['.']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###PyKoSpacing "
+      ],
+      "metadata": {
+        "id": "U9OOhUjmQRnB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install git+https://github.com/haven-jeon/PyKoSpacing.git"
+      ],
+      "metadata": {
+        "id": "scYo5_hbQUFn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sent = '왜 이런 영화 몰랐을까 마블영화에만 쩔어 있다가 재미있는 영화 잘봤어요'"
+      ],
+      "metadata": {
+        "id": "JgRHSUzfQbTv"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_sent = sent.replace(\" \", '') # 띄어쓰기가 없는 문장 임의로 만들기\n",
+        "print(new_sent)"
+      ],
+      "metadata": {
+        "id": "tTqkmNaaUgXc",
+        "outputId": "7e828b5a-540c-4265-9f05-348d65787764",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "왜이런영화몰랐을까마블영화에만쩔어있다가재미있는영화잘봤어요\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 띄어쓰기 교정 패키지\n",
+        "\n",
+        "from pykospacing import Spacing\n",
+        "spacing = Spacing()\n",
+        "kospacing_sent = spacing(new_sent)\n",
+        "\n",
+        "print('띄어쓰기가 없는 문장 :\\n', new_sent) \n",
+        "print('정답 문장:\\n', sent) \n",
+        "print('띄어쓰기 교정 후:\\n', kospacing_sent)"
+      ],
+      "metadata": {
+        "id": "0gXVZZbsUrks",
+        "outputId": "43f389de-ffbb-4f6c-b92b-3f74b453d445",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "띄어쓰기가 없는 문장 :\n",
+            " 왜이런영화몰랐을까마블영화에만쩔어있다가재미있는영화잘봤어요\n",
+            "정답 문장:\n",
+            " 왜 이런 영화 몰랐을까 마블영화에만 쩔어 있다가 재미있는 영화 잘봤어요\n",
+            "띄어쓰기 교정 후:\n",
+            " 왜 이런 영화 몰랐을까 마블영화에만 쩔어 있다가 재미있는 영화 잘 봤어요\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Py-Hanspell \n",
+        "\n",
+        "> https://github.com/ssut/py-hanspell/blob/master/README.md"
+      ],
+      "metadata": {
+        "id": "GOQi22cvVJmL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install git+https://github.com/ssut/py-hanspell.git"
+      ],
+      "metadata": {
+        "id": "06qU9nyPVVej",
+        "outputId": "23c90ac3-1972-4af0-b8a1-c1e08bac6c11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting git+https://github.com/ssut/py-hanspell.git\n",
+            "  Cloning https://github.com/ssut/py-hanspell.git to /tmp/pip-req-build-efrc7nk8\n",
+            "  Running command git clone -q https://github.com/ssut/py-hanspell.git /tmp/pip-req-build-efrc7nk8\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from py-hanspell==1.1) (2.23.0)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->py-hanspell==1.1) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->py-hanspell==1.1) (2.10)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->py-hanspell==1.1) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->py-hanspell==1.1) (2022.6.15)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 맞춤법 교정 패키지\n",
+        "\n",
+        "from hanspell import spell_checker\n",
+        "\n",
+        "sent = '맞춤법 틀리면 외 않되? 쓰고싶은대로쓰면돼지'\n",
+        "\n",
+        "spelled_sent = spell_checker.check(sent)\n",
+        "\n",
+        "# print(spelled_sent) \n",
+        "\n",
+        "hanspell_sent = spelled_sent.checked\n",
+        "print(hanspell_sent)"
+      ],
+      "metadata": {
+        "id": "oF9O6_tIVju4",
+        "outputId": "5508ef59-4bbb-4a18-d35e-3c30bb42498e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "맞춤법 틀리면 왜 안돼? 쓰고 싶은 대로 쓰면 되지\n"
           ]
         }
       ]
